--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,8 @@
     ],
     "object-shorthand": "off",
     "class-methods-use-this": "off",
-    "no-await-in-loop": "off"
+    "no-await-in-loop": "off",
+    "no-console" : "off"
+    
   }
 }
